--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,23 +35,12 @@
                 <span>Planos</span>
             </a>
         </li>
-        <li class="nav__item">
-            <a class="nav__link" href="">
-               <span>Entrar</span> 
-            </a>
-        </li>
+     
        
     </ul>
    </div>
    
-   <div class="nav__languages">
-   <a class="link__languages" href="">
-    <img class="logo__languagues" src="./assets/img/estados-unidos (1).png" alt="">
-   </a>
-   <a class="link__languages" href="">
-    <img class="logo__languagues" src="./assets/img/brasil (1).png" alt="">
-   </a>
-   </div>
+   
 
    
    <div class="nav__button">
